fixed folder issue

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EDUQ - Index</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../eduq-1d116565b060f1e30b8d28528741b48f78659436/scripts/tailwindcfg.js"></script>
+    <script src="scripts/tailwindcfg.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
