--- a/src/adm/gerenciar_usuarios.html
+++ b/src/adm/gerenciar_usuarios.html
@@ -30,7 +30,7 @@
       <div class="flex items-center gap-8">
         <div class="flex items-center gap-2">
           <img src="../../assets/user.png" alt="Foto perfil" class="h-8" />
-          <h1 class="font-bold text-gray-700">Administrador 01</h1>
+          <h1 class="font-bold text-gray-700 antialiased">Administrador 01</h1>
         </div>
         <a
           href="#"
@@ -100,7 +100,7 @@
         <div
           class="flex flex-col w-full font-montserrat text-gray-700 shadow-md rounded-md p-4 gap-4 bg-gray-50"
         >
-          <h1 class="text-md font-montserrat font-bold">Filtrar por:</h1>
+          <h1 class="text-md font-montserrat font-bold flex items-center gap-2"><span class="material-symbols-outlined">sort</span> Filtrar por:</h1>
           <div class="flex flex-col gap-2">
             <input
               placeholder="NOME"
