add criar turma

--- a/src/aluno-professor/main.html
+++ b/src/aluno-professor/main.html
@@ -41,54 +41,53 @@
             </div>
         </header>
         <menu
-      class="gap-2 bg-white shadow-sm w-full h-20 flex items-center px-10 mb-12"
+      class="gap-2 bg-white shadow-sm w-full h-20 2xl:h-12 flex items-center px-10 mb-12 2xl:mb-0"
      >
-          <span class="material-symbols-outlined text-3xl">other_houses</span>
-          <h1 class="text-sm font-bold">Menu Principal</h1>    
+          <span class="material-symbols-outlined text-3xl 2xl:text-2xl">other_houses</span>
+          <h1 class="text-sm 2xl:text-[12px] font-bold">Menu Principal</h1>    
      </menu>
-     <main class="flex flex-wrap w-4/6 items-center justify-center gap-x-40 gap-y-9 mb-12">
+     <main class="flex flex-wrap w-4/6 items-center justify-center gap-x-40 gap-y-9 2xl:gap-x-20 mb-12 2xl:mt-8 2xl:max-w-[700px]">
         <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[277px] rounded-full overflow-hidden" href="#">
+            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
                 <img class="drop-shadow-md w-56 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/calendario.svg" alt="">
             </a>
             <h1 class="font-medium">Calendário</h1>
         </div>
 
         <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[277px] rounded-full overflow-hidden" href="#">
+            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
                 <img class="drop-shadow-md w-56 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/atividades.svg" alt="">
             </a>
             <h1 class="font-medium">Atividades</h1>
         </div>
 
         <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[277px] rounded-full overflow-hidden" href="#">
+            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
                 <img class="drop-shadow-md w-56 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/duvida.svg" alt="">
             </a>
             <h1 class="font-medium">Dúvidas e Tutoria</h1>
         </div>
 
         <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[277px] rounded-full overflow-hidden" href="#">
+            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
                 <img class="drop-shadow-md w-56 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/chatbot.svg" alt="">
             </a>
             <h1 class="font-medium">Suporte de IA</h1>
         </div>
 
         <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[277px] rounded-full overflow-hidden" href="#">
+            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
                 <img class="drop-shadow-md w-56 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/forum.svg" alt="">
             </a>
             <h1 class="font-medium">Fórum de Discussão</h1>
         </div>
 
         <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[277px] rounded-full overflow-hidden" href="#">
+            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
                 <img class="drop-shadow-md w-56 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/perfil.svg" alt="">
             </a>
             <h1 class="font-medium">Meu Perfil</h1>
         </div>
      </main>
-    </section>
 </body>
 </html>
