--- a/src/adm/adm.html
+++ b/src/adm/adm.html
@@ -51,7 +51,7 @@
         >Usuários</a
       >
       <a
-        href=""
+        href="gerenciar_turmas.html"
         class="bg-roxo-claro text-white py-6 px-12 rounded-lg cursor-pointer hover:bg-purple-950"
         >Turmas</a
       >
