--- a/src/registrar_prof.html
+++ b/src/registrar_prof.html
@@ -38,33 +38,33 @@
             <div class="flex flex-col justify-start w-2/4 h-full pl-10 gap-1">
               <label class="font-montserrat" for="nome">NOME</label>
               <input
-                class="border border-neutral-700 w-11/12 h-16 2xl:h-10 rounded-sm px-4 focus:outline-none focus:border-violet-800"
+                class="border border-neutral-700 w-11/12 h-16 2xl:h-12 rounded-sm px-4 focus:outline-none focus:border-violet-800"
                 type="text"
                 name=""
                 id="nome"
               />
               <label class="font-montserrat" for="sobrenome">SOBRENOME</label>
               <input
-                class="border px-4 border-neutral-700 w-11/12 h-16 2xl:h-10 rounded-sm focus:outline-none focus:border-violet-800"
+                class="border px-4 border-neutral-700 w-11/12 h-16 2xl:h-12 rounded-sm focus:outline-none focus:border-violet-800"
                 type="text"
                 name=""
                 id="sobrenome"
               />
               <label class="font-montserrat" for="email">EMAIL</label>
               <input
-                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-10 rounded-sm focus:outline-none focus:border-violet-800"
+                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-12 rounded-sm focus:outline-none focus:border-violet-800"
                 type="email"
                 name=""
                 id="email"
               />
               <label class="font-montserrat" for="senha">SENHA</label>
               <input
-                class="border px-4 border-neutral-700 w-11/12 h-16 2xl:h-10 rounded-sm focus:outline-none focus:border-violet-800"
+                class="border px-4 border-neutral-700 w-11/12 h-16 2xl:h-12 rounded-sm focus:outline-none focus:border-violet-800"
                 type="password"
                 name=""
                 id="senha"
               />
-              <div class="mt-8 flex items-center gap-14 2xl:gap-12">
+              <div class="mt-8 2xl:mt-5 flex items-center gap-14 2xl:gap-12">
                 <input
                   class="bg-roxo-claro text-white font-montserrat font-black w-5/6 py-4 rounded-full cursor-pointer hover:bg-indigo-950 2xl:w-5/6"
                   type="button"
@@ -84,28 +84,28 @@
             <div class="flex flex-col justify-start pl-10 w-2/4 h-full gap-1">
               <label class="font-montserrat" for="data">DATA DE NASCIMENTO</label>
               <input
-                class="border px-4 border-neutral-700 w-11/12 h-16 2xl:h-10 rounded-sm focus:outline-none focus:border-violet-800"
+                class="border px-4 border-neutral-700 w-11/12 h-16 2xl:h-12 rounded-sm focus:outline-none focus:border-violet-800"
                 type="date"
                 name=""
                 id="data"
               />
               <label class="font-montserrat" for="telefone">TELEFONE</label>
               <input
-                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-10 rounded-sm focus:outline-none focus:border-violet-800"
+                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-12 rounded-sm focus:outline-none focus:border-violet-800"
                 type="tel"
                 name=""
                 id="telefone"
               />
               <label class="font-montserrat" for="rg">RG</label>
               <input
-                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-10 rounded-sm focus:outline-none focus:border-violet-800"
+                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-12 rounded-sm focus:outline-none focus:border-violet-800"
                 type="number"
                 name=""
                 id="rg"
               />
               <label class="font-montserrat" for="cpf">CPF</label>
               <input
-                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-10 rounded-sm focus:outline-none focus:border-violet-800"
+                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-12 rounded-sm focus:outline-none focus:border-violet-800"
                 type="number"
                 name=""
                 id="cpf"
@@ -123,19 +123,19 @@
               />
               <label class="font-montserrat" for="nome_mae">NOME MÃE</label>
               <input
-                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-10 rounded-sm focus:outline-none focus:border-violet-800"
+                class="border border-neutral-700 px-4 w-11/12 h-16 2xl:h-12 rounded-sm focus:outline-none focus:border-violet-800"
                 type="text"
                 name=""
                 id="nome_mae"
               />
               <label class="font-montserrat" for="num_conta_bancaria">Nº CONTA BANCÁRIA</label>
               <input
-                class="border px-4 border-neutral-700 w-11/12 h-16 2xl:h-10 rounded-sm focus:outline-none focus:border-violet-800"
+                class="border px-4 border-neutral-700 w-11/12 h-16 2xl:h-12 rounded-sm focus:outline-none focus:border-violet-800"
                 type="number"
                 name=""
                 id="num_conta_bancaria"
               />
-              <div class="mt-8 flex items-center gap-14 2xl:gap-12">
+              <div class="mt-8 2xl:mt-5 flex items-center gap-14 2xl:gap-12">
                 <input
                   class="bg-roxo-claro text-white font-montserrat font-black w-5/6 py-4 rounded-full cursor-pointer hover:bg-indigo-950 2xl:w-5/6"
                   type="submit"
