--- a/src/aluno-professor/professor/professor_perfil.html
+++ b/src/aluno-professor/professor/professor_perfil.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EDUQ - Página Principal </title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="../../scripts/tailwindcfg.js"></script>
+    <script src="../../../scripts/tailwindcfg.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
             <div class="flex items-center bg-fundo-claro  rounded-lg text-gray-400"><label for="search" class="material-symbols-outlined p-2 rounded-lg">search</label><input placeholder="Pesquisar" id="search" type="text" class="bg-fundo-claro p-2 italic text-sm focus:outline-none rounded-lg"></div>
             <img src="../../assets/Group 3-PhotoRoom.png-PhotoRoom.png" class="h-36">
             <div class="flex items-center gap-3">
-                <img src="../../assets/user.png" class="h-10">
+                <img src="../../../assets/user.png" class="h-10">
                 <h1 class="flex items-center italic gap-1 text-sm">Olá,<b>Artur V.</b><a href="#" class="material-symbols-outlined">arrow_drop_down</a></h1>
                 <a
           href="#"
@@ -43,50 +43,61 @@
         <menu
       class="gap-2 bg-white shadow-sm w-full h-20 2xl:h-12 flex items-center px-10 mb-12 2xl:mb-0"
      >
-          <span class="material-symbols-outlined text-3xl 2xl:text-2xl">other_houses</span>
-          <h1 class="text-sm 2xl:text-[12px] font-bold">Menu Principal</h1>    
+            <span class="material-symbols-outlined text-3xl text-gray-300">home</span>
+            <h1 class="text-sm font-bold text-gray-300">Menu Principal</h1>
+            <p class="text-gray-300 text-bold">></p>
+            <span class="material-symbols-outlined text-3xl text-gray-700"
+            >account_circle</span
+            >
+            <h1 class="text-sm font-bold text-gray-700">Meu Perfil</h1>    
      </menu>
-     <main class="flex flex-wrap w-4/6 items-center justify-center gap-x-40 gap-y-9 2xl:gap-x-20 mt-6 mb-12 2xl:mt-8 2xl:max-w-[700px]">
-        <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
-                <img class="drop-shadow-md w-44 2xl:w-24 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/calendario.svg" alt="">
-            </a>
-            <h1 class="font-medium">Calendário</h1>
+     <main class="flex flex-wrap w-4/6 h-full items-center justify-center gap-x-40 gap-y-9 2xl:gap-x-20 mt-6 mb-12 2xl:mt-8 2xl:max-w-[700px]">
+        <div class="flex flex-col items-center bg-white h-3/4 w-2/6 rounded-3xl shadow-md">
+            <div class="h-2/6 w-full bg-gradient-to-l from-purple-900 to-violet-700 rounded-t-3xl"></div>
+            <img src="../../../assets/user.png" class="size-40 mt-[-85px] drop-shadow-md" alt="">
+            <div class="w-full flex flex-col items-center mt-4">
+                <h1 class="font-semibold text-lg">Artur Vargas</h1>
+                <p class="text-gray-500">Professor</p>
+                </div>
+                <div class="h-20 w-full mt-10 flex justify-center items-center gap-12">
+                    <div class="text-center">
+                        <h1 class="text-roxo-claro font-semibold text-3xl">2</h1>
+                        <p class="text-gray-500">Turmas</p>
+                    </div>
+                    <div class="text-center">
+                        <h1 class="text-roxo-claro font-semibold text-3xl">1</h1>
+                        <p class="text-gray-500">Disciplina</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
-                <img class="drop-shadow-md w-44 2xl:w-24 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/atividades.svg" alt="">
-            </a>
-            <h1 class="font-medium">Atividades</h1>
-        </div>
-
-        <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
-                <img class="drop-shadow-md w-44 2xl:w-24 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/duvida.svg" alt="">
-            </a>
-            <h1 class="font-medium">Dúvidas e Tutoria</h1>
-        </div>
-
-        <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
-                <img class="drop-shadow-md w-44 2xl:w-24 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/chatbot.svg" alt="">
-            </a>
-            <h1 class="font-medium">Suporte de IA</h1>
-        </div>
-
-        <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
-                <img class="drop-shadow-md w-44 2xl:w-24 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/forum.svg" alt="">
-            </a>
-            <h1 class="font-medium">Fórum de Discussão</h1>
-        </div>
-
-        <div class="flex flex-col items-center justify-center gap-2">
-            <a class="flex items-center justify-center bg-violet-200 size-[250px] 2xl:size-[150px] rounded-full overflow-hidden" href="#">
-                <img class="drop-shadow-md w-44 2xl:w-24 transition ease-in-out delay-0 hover:-translate-y-1 hover:scale-100 duration-300" src="../../assets/perfil.svg" alt="">
-            </a>
-            <h1 class="font-medium">Meu Perfil</h1>
+        <div class="bg-white h-3/4 w-3/6 rounded-xl shadow-md overflow-hidden">
+            <div class="text-white text-center font-semibold p-5 bg-roxo-claro">
+                <h1>Turmas</h1>
+            </div>
+            <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+                <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+                  <thead class="text-xs text-gray-700 uppercase bg-gray-50">
+                    <tr>
+                      <th scope="col" class="px-6 py-3">Turno</th>
+                      <th scope="col" class="px-6 py-3">Curso</th>
+                      <th scope="col" class="px-6 py-3">Data de Início</th>
+                      <th scope="col" class="px-6 py-3">Data de Termino</th>
+                      <th scope="col" class="px-6 py-3">ENTRAR</th>            
+                    </tr>
+                  </thead>
+                  <tbody>
+                        <tr class="odd:bg-white even:bg-gray-50 border-b">
+                            <td class="px-6 py-4">Manhã</td>
+                            <td class="px-6 py-4">Dev. de Sistemas</td>
+                            <td class="px-6 py-4">05/01/2023</td>
+                            <td class="px-6 py-4">05/01/2024</td>
+                            <td class="px-6 py-4 text-roxo-claro font-semibold"><a href="#" class="hover:underline">Acessar</a></td>
+                          </tr>
+                  </tbody>
+                </table>
+              </div>
         </div>
      </main>
 </body>
