--- a/src/aluno-professor/professor/professor_perfil.html
+++ b/src/aluno-professor/professor/professor_perfil.html
@@ -29,7 +29,7 @@
     <section class="flex flex-col w-full h-screen items-center">
         <header class="bg-white shadow-sm w-full h-20 flex justify-between items-center px-10">
             <div class="flex items-center bg-fundo-claro  rounded-lg text-gray-400"><label for="search" class="material-symbols-outlined p-2 rounded-lg">search</label><input placeholder="Pesquisar" id="search" type="text" class="bg-fundo-claro p-2 italic text-sm focus:outline-none rounded-lg"></div>
-            <img src="../../assets/Group 3-PhotoRoom.png-PhotoRoom.png" class="h-36">
+            <img src="../../../assets/Group 3-PhotoRoom.png-PhotoRoom.png" class="h-36">
             <div class="flex items-center gap-3">
                 <img src="../../../assets/user.png" class="h-10">
                 <h1 class="flex items-center italic gap-1 text-sm">Olá,<b>Artur V.</b><a href="#" class="material-symbols-outlined">arrow_drop_down</a></h1>
@@ -51,10 +51,11 @@
             >
             <h1 class="text-sm font-bold text-gray-700">Meu Perfil</h1>    
      </menu>
-     <main class="flex flex-wrap w-4/6 h-full items-center justify-center gap-x-40 gap-y-9 2xl:gap-x-20 mt-6 mb-12 2xl:mt-8 2xl:max-w-[700px]">
-        <div class="flex flex-col items-center bg-white h-3/4 w-2/6 rounded-3xl shadow-md">
+     <main class="flex w-full h-full items-center justify-center gap-x-40 gap-y-9 2xl:gap-x-20 mt-6 mb-12 2xl:mt-8">
+
+        <div class="flex flex-col items-center bg-white h-3/4 w-3/12 2xl:h-96 2xl:w-1/4 rounded-3xl shadow-md">
             <div class="h-2/6 w-full bg-gradient-to-l from-purple-900 to-violet-700 rounded-t-3xl"></div>
-            <img src="../../../assets/user.png" class="size-40 mt-[-85px] drop-shadow-md" alt="">
+            <img src="../../../assets/user.png" class="size-40 2xl:size-32 mt-[-85px] drop-shadow-md" alt="">
             <div class="w-full flex flex-col items-center mt-4">
                 <h1 class="font-semibold text-lg">Artur Vargas</h1>
                 <p class="text-gray-500">Professor</p>
@@ -72,7 +73,7 @@
             </div>
         </div>
 
-        <div class="bg-white h-3/4 w-3/6 rounded-xl shadow-md overflow-hidden">
+        <div class="bg-white h-3/4 w-2/6 2xl:h-96 2xl:w-2/4 rounded-xl shadow-md overflow-hidden">
             <div class="text-white text-center font-semibold p-5 bg-roxo-claro">
                 <h1>Turmas</h1>
             </div>
