--- a/src/aluno-professor/professor/turma.html
+++ b/src/aluno-professor/professor/turma.html
@@ -13,11 +13,42 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
+
+    <style>
+        *::-webkit-scrollbar {
+        width: 7px;
+        }
+        *::-webkit-scrollbar-track {
+        background-color: #DFE9EB
+        }
+
+        *::-webkit-scrollbar-track:hover {
+        background-color: #B8C0C2;
+        }
+
+        *::-webkit-scrollbar-track:active {
+        background-color: #B8C0C2;
+        }
+
+        *::-webkit-scrollbar-thumb {
+        
+        background-color: #2e1065;
+        }
+
+        *::-webkit-scrollbar-thumb:hover {
+        background-color: #4c1d95;
+        }
+
+        *::-webkit-scrollbar-thumb:active {
+        background-color: #4c1d95;
+}
+        
+    </style>
 </head>
 <body class="bg-fundo-claro flex font-poppins h-screen ">
     <nav class="flex flex-col items-center h-full bg-roxo-claro w-20">
         <div class="flex flex-col gap-4 mt-16">
-            <a href="#" class="flex items-center justify-center material-symbols-outlined text-white bg-[#201336] text-3xl size-12 rounded-full hover:bg-white hover:text-[#201336] transition-all">other_houses</a>
+            <a href="../main.html" class="flex items-center justify-center material-symbols-outlined text-white bg-[#201336] text-3xl size-12 rounded-full hover:bg-white hover:text-[#201336] transition-all">other_houses</a>
             <a href="#" class="flex items-center justify-center material-symbols-outlined text-white bg-[#201336] text-3xl size-12 rounded-full hover:bg-white hover:text-[#201336] transition-all">calendar_month</a>
             <a href="#" class="flex items-center justify-center material-symbols-outlined text-white bg-[#201336] text-3xl size-12 rounded-full hover:bg-white hover:text-[#201336] transition-all">description</a>
             <a href="#" class="flex items-center justify-center material-symbols-outlined text-white bg-[#201336] text-3xl size-12 rounded-full hover:bg-white hover:text-[#201336] transition-all">psychology_alt</a>
@@ -29,7 +60,7 @@
     <section class="flex flex-col w-full h-screen items-center">
         <header class="bg-white shadow-sm w-full h-20 flex justify-between items-center px-10">
             <div class="flex items-center bg-fundo-claro  rounded-lg text-gray-400"><label for="search" class="material-symbols-outlined p-2 rounded-lg">search</label><input placeholder="Pesquisar" id="search" type="text" class="bg-fundo-claro p-2 italic text-sm focus:outline-none rounded-lg"></div>
-            <img src="../../../assets/Group 3-PhotoRoom.png-PhotoRoom.png" class="h-36">
+            <a href="../main.html"><img src="../../../assets/Group 3-PhotoRoom.png-PhotoRoom.png" class="h-36"></a>
             <div class="flex items-center gap-3">
                 <img src="../../../assets/user.png" class="h-10">
                 <h1 class="flex items-center italic gap-1 text-sm">Olá,<b>Artur V.</b><a href="#" class="material-symbols-outlined">arrow_drop_down</a></h1>
